class Enemigo extends Personaje {
private String tipo;
public Enemigo(String nombre, int nivel, String tipo) {
super(nombre, nivel);
this.tipo = tipo;
}
public void gritar() {
System.out.println(nombre + " emite un aterrador grito como " + tipo + ".");
}
}

